# Learning-Haskell

./: README.md
basics/ex01-hello-world/: README.md  ex01-hello-world.cabal
basics/ex01-hello-world/src/: Main.hs
basics/ex02-variables/: README.md  ex02-variables.cabal
basics/ex02-variables/src/: Main.hs
basics/ex03-functions/: README.md  ex03-functions.cabal
basics/ex03-functions/src/: Main.hs
basics/ex04-lists/: README.md  ex04-lists.cabal
basics/ex04-lists/src/: Main.hs
basics/ex05-list-comprehension/: README.md  ex05-list-comprehension.cabal
basics/ex05-list-comprehension/src/: Main.hs
basics/ex06-type-signatures/: README.md  ex06-type-signatures.cabal
basics/ex06-type-signatures/src/: Main.hs
basics/ex07-numbers/: README.md  ex07-numbers.cabal
basics/ex07-numbers/src/: Main.hs
basics/ex08-pattern-matching/: README.md  ex08-pattern-matching.cabal
basics/ex08-pattern-matching/src/: Main.hs
basics/ex09-data-records/: README.md  ex09-data-records.cabal
basics/ex09-data-records/src/: Main.hs
basics/ex10-algebraic-datatype/: README.md  ex10-algebraic-datatype.cabal
basics/ex10-algebraic-datatype/src/: Main.hs
