name:                ex04-lists
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hoppfull/ex04-lists#readme
license:             BSD3
license-file:        LICENSE
author:              Björn Kihlberg
maintainer:          hoppfull@gmail.com
copyright:           hoppfull
category:            whatevs
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ex04-lists
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
