name:                ex06-type-signatures
version:             0.1.0.0
homepage:            https://github.com/hoppfull/ex06-type-signatures#readme
author:              Björn Kihlberg
maintainer:          hoppfull@gmail.com
copyright:           hoppfull
category:            whatevs
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ex06-type-signatures
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
